# python-default-template

./: .dockerignore  .gitignore  README.md  compose.yml  local_docker_setup.sh
backend/: Dockerfile  pyproject.toml
docs/: init-project.md  installed-packages.md  pyenv.md
